Introduce GraalVM Truffle backend, refactor runtime interpreter APIs